--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "private": true,
   "scripts": {
     "build": "turbo run build",
+    "test": "turbo run test",
     "dev": "turbo run dev",
+    "docker-build": "turbo run docker-build",
+    "docker-tag": "turbo run docker-tag",
+    "docker-push": "turbo run docker-push",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "check-types": "turbo run check-types"
