--- a/.github/workflows/push-to-main.yml
+++ b/.github/workflows/push-to-main.yml
@@ -19,11 +19,12 @@ jobs:
         with:
           fetch-depth: 2
 
-      - name: Setup Node.js environment
-        uses: actions/setup-node@v3
+      - name: Set up PNPM
+        uses: pnpm/action-setup@v4
         with:
-          node-version: 23
-          cache: "npm"
+          version: 10
+
+      - uses: pnpm/action-setup@v4
 
       - name: Install dependencies
         run: npm install
