--- a/.github/workflows/push-to-main.yml
+++ b/.github/workflows/push-to-main.yml
@@ -24,6 +24,11 @@ jobs:
         with:
           version: 10.0.0
 
+      - name: Set up dotnet
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: "9.0.2"
+
       - name: Install dependencies
         run: pnpm install
 
