--- a/.github/workflows/push-to-main.yml
+++ b/.github/workflows/push-to-main.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Set up dotnet
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: "9.0.2"
+          dotnet-version: "9.0.x"
 
       - name: Install dependencies
         run: pnpm install
