--- a/.github/workflows/push-to-main.yml
+++ b/.github/workflows/push-to-main.yml
@@ -29,5 +29,8 @@ jobs:
       - name: Building all projects
         run: pnpm build
 
+      - name: Building all projects
+        run: pnpm lint
+
       - name: Running tests
         run: pnpm test
