change name of linting step in main action

--- a/.github/workflows/push-to-main.yml
+++ b/.github/workflows/push-to-main.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Building all projects
         run: pnpm build
 
-      - name: Building all projects
+      - name: Running linter
         run: pnpm lint
 
       - name: Running tests
