--- a/apps/homepage/package.json
+++ b/apps/homepage/package.json
@@ -11,11 +11,12 @@
     "docker-build": "docker build -t fitness-homepage .",
     "docker-tag": "docker tag fitness-homepage ghcr.io/fitnessapp-clemens-and-yanni/fitness-homepage:latest",
     "docker-push": "docker push ghcr.io/fitnessapp-clemens-and-yanni/fitness-homepage:latest",
-    "lint": "pnpm exec eslint .",
+    "lint": "pnpm exec astro check",
     "format": "pnpm exec prettier . --write",
     "test": "echo No Astro tests yet"
   },
   "dependencies": {
+    "@astrojs/check": "^0.9.4",
     "@astrojs/mdx": "^4.1.0",
     "@astrojs/node": "^9.1.2",
     "@astrojs/react": "^4.2.1",
@@ -27,7 +28,8 @@
     "canvas-confetti": "^1.9.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^4.0.9"
+    "tailwindcss": "^4.0.9",
+    "typescript": "^5.8.2"
   },
   "devDependencies": {
     "@typescript-eslint/parser": "^8.26.0",
