--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
     "turbo": "^2.4.4",
     "typescript": "5.8.2"
   },
-  "packageManager": "pnpm@10.6.1",
   "engines": {
     "node": ">=18"
-  }
+  },
+  "packageManager": "npm@11.2.0",
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ]
 }
