--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -3,23 +3,41 @@
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --web --port 4000",
+    "dev": "expo start --web --port 4000",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~4.0.1",
+    "@rn-primitives/portal": "^1.1.0",
+    "@rn-primitives/slot": "^1.1.0",
+    "@rn-primitives/types": "^1.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "expo": "~52.0.38",
+    "expo-constants": "~17.0.8",
+    "expo-linking": "~7.0.5",
+    "expo-router": "~4.0.18",
     "expo-status-bar": "~2.0.1",
+    "lucide-react-native": "^0.479.0",
+    "nativewind": "^4.1.23",
     "react": "18.3.1",
-    "react-native": "0.76.7",
-    "react-native-web": "~0.19.13",
     "react-dom": "18.3.1",
-    "@expo/metro-runtime": "~4.0.1"
+    "react-native": "0.76.7",
+    "react-native-reanimated": "^3.17.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "^15.11.2",
+    "react-native-web": "~0.19.13",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
+    "tailwindcss": "^4.0.14",
     "typescript": "^5.3.3"
   },
   "private": true
