add some trpc content, not building because of import issues

--- a/apps/backend_and_homepage/tsconfig.json
+++ b/apps/backend_and_homepage/tsconfig.json
@@ -28,7 +28,10 @@
     "baseUrl": ".",
     "paths": {
       "~/*": ["./src/*"]
-    }
+    },
+
+    /* Allow that other projects import it for TRPC */
+    "composite": true
   },
   "include": [
     ".eslintrc.cjs",
@@ -39,5 +42,6 @@
     "**/*.js",
     ".next/types/**/*.ts"
   ],
+
   "exclude": ["node_modules"]
 }
