--- a/apps/mobile/tsconfig.json
+++ b/apps/mobile/tsconfig.json
@@ -5,5 +5,11 @@
     "paths": {
       "@/*": ["./*"]
     }
-  }
+  },
+  "files": [],
+  "references": [
+    {
+      "path": "../backend_and_homepage"
+    }
+  ]
 }
