--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -15,6 +15,9 @@
     "@rn-primitives/slot": "^1.1.0",
     "@rn-primitives/types": "^1.1.0",
     "@tanstack/react-query": "^5.69.0",
+    "@trpc/client": "^11.0.0",
+    "@trpc/react-query": "^11.0.0",
+    "@trpc/server": "^11.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "expo": "~52.0.38",
@@ -22,10 +25,10 @@
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.18",
     "expo-status-bar": "~2.0.1",
-    "lucide-react-native": "^0.479.0",
+    "lucide-react-native": "^0.486.0",
     "nativewind": "^4.1.23",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-native": "0.76.7",
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-reanimated": "^3.17.1",
@@ -33,14 +36,17 @@
     "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.11.2",
     "react-native-web": "~0.19.13",
+    "react-query": "^3.39.3",
+    "superjson": "^2.2.1",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~18.3.12",
-    "tailwindcss": "^4.0.14",
-    "typescript": "^5.3.3"
+    "@types/react": "19.0.0",
+    "tailwindcss": "^4.0.15",
+    "typescript": "5.8.2"
   },
   "private": true
 }
