remove some unnecessary stuff and get stuck because tRPC actually is NOT working! xD

--- a/backend_and_homepage/tsconfig.json
+++ b/backend_and_homepage/tsconfig.json
@@ -18,23 +18,20 @@
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "jsx": "preserve",
+    "noEmit": true,
     "plugins": [
       {
         "name": "next"
       }
     ],
     "incremental": true,
-    /* Emit types so that the mobile project can use the tRPC AppRouter */
-    "emitDeclarationOnly": true,
-    "outDir": "generatedTypes",
     /* Path Aliases */
     "baseUrl": ".",
     "paths": {
       "~/*": ["./src/*"]
     },
     /* Allow that other projects import it for TRPC */
-    "composite": true,
-    "noEmit": false
+    "composite": true
   },
   "include": [
     ".eslintrc.cjs",
