--- a/backend_and_homepage/tsconfig.json
+++ b/backend_and_homepage/tsconfig.json
@@ -42,5 +42,5 @@
     "**/*.js",
     ".next/types/**/*.ts"
   ],
-  "exclude": ["node_modules", "generatedTypes"]
+  "exclude": ["node_modules"]
 }
