finish translating all endpoints to tRPC

--- a/code/server/package.json
+++ b/code/server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx root"
+    "start": "tsx root",
+    "dev": "tsx watch root"
   },
   "keywords": [],
   "author": "",
