--- a/code/mobile/tsconfig.json
+++ b/code/mobile/tsconfig.json
@@ -6,5 +6,5 @@
       "@/*": ["./*"]
     }
   },
-  "references": [{ "path": "../server" }]
+  "references": [{ "path": "../server" }, { "path": "../shared" }]
 }
