--- a/code/server/package.json
+++ b/code/server/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@trpc/server": "^11.0.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "mongodb": "^6.15.0",
     "superjson": "^2.2.2",
     "zod": "^3.24.2"
   },
