add dockerfiles and tmp docker-compose.yml

--- a/code/server/package.json
+++ b/code/server/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "tsc -b",
     "start": "tsx root",
-    "dev": "tsx watch root"
+    "dev": "tsx watch root",
+    "prod": "tsx root"
   },
   "keywords": [],
   "author": "",
