--- a/code/mobile/package.json
+++ b/code/mobile/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "expo start --web --port 4000",
     "dev": "expo start --web --port 4000",
+    "prod": "expo start --web --port 4000",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
