--- a/code/shared/tsconfig.json
+++ b/code/shared/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "ESNext",
     "module": "CommonJS",
     "rootDir": "src",
-    "outDir": "types",
+    "outDir": "build",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
