--- a/.github/workflows/dockerize-and-push.yml
+++ b/.github/workflows/dockerize-and-push.yml
@@ -1,8 +1,10 @@
 name: Dockerize and Push
 
-on:
-  push:
-    branches: ["main"]
+on: push
+
+# on:
+#   push:
+#     branches: ["main"]
 
 jobs:
   dockerize:
