--- a/.github/workflows/dockerize-and-push.yml
+++ b/.github/workflows/dockerize-and-push.yml
@@ -1,10 +1,8 @@
 name: Dockerize and Push
 
-on: push
-
-# on:
-#   push:
-#     branches: ["main"]
+on:
+  push:
+    branches: ["main"]
 
 jobs:
   dockerize:
