--- a/code/mobile/package.json
+++ b/code/mobile/package.json
@@ -15,7 +15,8 @@
     "@rn-primitives/portal": "^1.1.0",
     "@rn-primitives/slot": "^1.1.0",
     "@rn-primitives/types": "^1.1.0",
-    "@tanstack/react-query": "^5.69.0",
+    "@tanstack/react-form": "^1.2.4",
+    "@tanstack/react-query": "^5.71.5",
     "@trpc/client": "^11.0.1",
     "@trpc/react-query": "^11.0.1",
     "@trpc/server": "^11.0.1",
