--- a/code/server/package.json
+++ b/code/server/package.json
@@ -7,7 +7,8 @@
     "build": "tsc -b",
     "start": "tsx root",
     "dev": "tsx watch root",
-    "prod": "tsx root"
+    "prod": "tsx root",
+    "db": "docker run -d --name database-fitness-app-mongodb -p 27017:27017 -d mongodb/mongodb-community-server"
   },
   "keywords": [],
   "author": "",
