--- a/code/mobile/package.json
+++ b/code/mobile/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
     "@rn-primitives/portal": "^1.1.0",
+    "@rn-primitives/progress": "^1.1.0",
     "@rn-primitives/slot": "^1.1.0",
     "@rn-primitives/types": "^1.1.0",
     "@tanstack/react-form": "^1.2.4",
@@ -40,7 +41,7 @@
     "react-native-web": "~0.19.13",
     "react-query": "^3.39.3",
     "superjson": "^2.2.1",
-    "tailwind-merge": "^3.1.0",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
   },
