--- a/code/mobile/package.json
+++ b/code/mobile/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
+    "@rn-primitives/label": "^1.1.0",
     "@rn-primitives/portal": "^1.1.0",
     "@rn-primitives/progress": "^1.1.0",
+    "@rn-primitives/radio-group": "^1.1.0",
     "@rn-primitives/slot": "^1.1.0",
     "@rn-primitives/types": "^1.1.0",
     "@tanstack/react-form": "^1.2.4",
