--- a/code/mobile/tsconfig.json
+++ b/code/mobile/tsconfig.json
@@ -4,7 +4,8 @@
     "strict": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@shared/*": ["../shared/build/*"]
     }
   },
   "references": [{ "path": "../server" }, { "path": "../shared" }]
