--- a/code/server/tsconfig.json
+++ b/code/server/tsconfig.json
@@ -4,15 +4,17 @@
     "module": "NodeNext",
     "sourceMap": true,
     "outDir": "./build",
+    "moduleResolution": "nodenext",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@shared/*": ["../shared/build/*"]
     },
     "composite": true
   },
   "exclude": ["node_modules", "build"],
-  "references": [{ "path": "../shared" }]
+  "references": [{ "path": "../shared", "prepend": true}]
 }
