--- a/code/shared/tsconfig.json
+++ b/code/shared/tsconfig.json
@@ -2,6 +2,8 @@
   "compilerOptions": {
     "target": "ESNext",
     "module": "CommonJS",
+    "declaration": true,
+    "declarationMap": true,
     "rootDir": "src",
     "outDir": "build",
     "esModuleInterop": true,
@@ -10,5 +12,6 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "composite": true
-  }
+  },
+  "references": []
 }
