fix idx problem and make it so that the numbers are rounded

--- a/code/server/tsconfig.json
+++ b/code/server/tsconfig.json
@@ -16,5 +16,5 @@
     "composite": true
   },
   "exclude": ["node_modules", "build"],
-  "references": [{ "path": "../shared", "prepend": true}]
+  "references": [{ "path": "../shared" }]
 }
