--- a/code/server/package.json
+++ b/code/server/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "mongodb": "^6.15.0",
+    "oauth-1.0a": "^2.2.6",
     "superjson": "^2.2.2",
     "zod": "^3.24.2"
   },
