--- a/code/mobile/package.json
+++ b/code/mobile/package.json
@@ -16,6 +16,7 @@
     "@rn-primitives/portal": "^1.1.0",
     "@rn-primitives/progress": "^1.1.0",
     "@rn-primitives/radio-group": "^1.1.0",
+    "@rn-primitives/select": "^1.1.0",
     "@rn-primitives/slot": "^1.1.0",
     "@rn-primitives/types": "^1.1.0",
     "@tanstack/react-form": "^1.2.4",
