--- a/.github/workflows/dockerize-and-push.yml
+++ b/.github/workflows/dockerize-and-push.yml
@@ -37,3 +37,12 @@ jobs:
         run: |
           docker push ghcr.io/fitnessapp-clemens-and-yanni/fitness-server:latest && \
           docker push ghcr.io/fitnessapp-clemens-and-yanni/fitness-mobile:latest
+
+      - name: Deploy remote using SSH
+        uses: appleboy/ssh-action@v1
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.HOST_USERNAME }}
+          password: ${{ secrets.HOST_PASSWORD }}
+          port: 22
+          script: whoami
