--- a/.github/workflows/dockerize-and-push.yml
+++ b/.github/workflows/dockerize-and-push.yml
@@ -42,7 +42,7 @@ jobs:
         uses: appleboy/ssh-action@master
         with:
           host: ${{secrets.HOST}}
-          username: ${{secrets.USERNAME}}
+          username: ${{secrets.HOST_USERNAME}}
           key: ${{secrets.KEY}}
           script: |
             echo Hi from $(whoami)
