#34 Make the expo export use npx serve instead because expo dev does not use 0.0.0.0 and thus cannot be seen on the network

--- a/code/Dockerfile.mobile
+++ b/code/Dockerfile.mobile
@@ -4,9 +4,12 @@ WORKDIR /app/mobile
 COPY ./mobile/package*.json .
 RUN npm install --only=prod
 COPY ./mobile .
+RUN npx expo export -p web
+WORKDIR /app/mobile/dist
+
 
 # RUN npx react-native bundle --platform ios --dev false --entry-file index.js --bundle-output ios/main.jsbundle --assets-dest ios/assets
 # RUN npx react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res
 
 EXPOSE 4000
-CMD ["npm", "run", "prod"]
+CMD ["npx", "serve", "."]
