--- a/.github/workflows/dockerize-and-push.yml
+++ b/.github/workflows/dockerize-and-push.yml
@@ -27,16 +27,16 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # - name: Build images
-      #   run: |
-      #     cd code && \
-      #     docker build -t ghcr.io/fitnessapp-clemens-and-yanni/fitness-server:latest -f Dockerfile.server . && \
-      #     docker build -t ghcr.io/fitnessapp-clemens-and-yanni/fitness-mobile:latest -f Dockerfile.mobile .
+      - name: Build images
+        run: |
+          cd code && \
+          docker build -t ghcr.io/fitnessapp-clemens-and-yanni/fitness-server:latest -f Dockerfile.server . && \
+          docker build -t ghcr.io/fitnessapp-clemens-and-yanni/fitness-mobile:latest -f Dockerfile.mobile .
 
-      # - name: Push images
-      #   run: |
-      #     docker push ghcr.io/fitnessapp-clemens-and-yanni/fitness-server:latest && \
-      #     docker push ghcr.io/fitnessapp-clemens-and-yanni/fitness-mobile:latest
+      - name: Push images
+        run: |
+          docker push ghcr.io/fitnessapp-clemens-and-yanni/fitness-server:latest && \
+          docker push ghcr.io/fitnessapp-clemens-and-yanni/fitness-mobile:latest
 
       - name: Deploy remote using SSH
         uses: appleboy/ssh-action@v1
