--- a/code/mobile/package.json
+++ b/code/mobile/package.json
@@ -52,6 +52,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "18.3.1",
+    "serve": "^14.2.4",
     "tailwindcss": "^3.4.17",
     "typescript": "5.8.2"
   },
