--- a/.github/workflows/dockerize-and-push.yml
+++ b/.github/workflows/dockerize-and-push.yml
@@ -46,6 +46,7 @@ jobs:
           key: ${{secrets.KEY}}
           script: |
             cd ~/dockerization
-            docker compose down || echo 'No running docker images by docker compose...'
-            wget 'https://raw.githubusercontent.com/FitnessApp-Clemens-and-Yanni/fitness-app/refs/heads/main/code/docker-compose.yml'
             docker compose up -d
+
+          # docker compose down || echo 'No running docker images by docker compose...'
+          # wget 'https://raw.githubusercontent.com/FitnessApp-Clemens-and-Yanni/fitness-app/refs/heads/main/code/docker-compose.yml docker-compose.yml'
