fix production link

--- a/.github/workflows/dockerize-and-push.yml
+++ b/.github/workflows/dockerize-and-push.yml
@@ -46,7 +46,8 @@ jobs:
           key: ${{secrets.KEY}}
           script: |
             cd ~/dockerization
+            docker compose down || echo 'No running docker images by docker compose...'
+            docker compose pull
             docker compose up -d
 
-          # docker compose down || echo 'No running docker images by docker compose...'
           # wget 'https://raw.githubusercontent.com/FitnessApp-Clemens-and-Yanni/fitness-app/refs/heads/main/code/docker-compose.yml docker-compose.yml'
