--- a/code/server/package.json
+++ b/code/server/package.json
@@ -13,7 +13,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
     "@trpc/server": "^11.0.1",
     "cors": "^2.8.5",
