--- a/code/docker-compose.yml
+++ b/code/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     image: ghcr.io/fitnessapp-clemens-and-yanni/fitness-mobile:latest
     ports:
       - "4000:3000"
-    container_name: phone-web-fitness-app-react-native
+    container_name: phone-web
     networks:
       - fitness-app-network
     environment:
@@ -13,7 +13,7 @@ services:
     image: ghcr.io/fitnessapp-clemens-and-yanni/fitness-server:latest
     ports:
       - "3000:3000"
-    container_name: server-fitness-app-tsx
+    container_name: backend
     networks:
       - fitness-app-network
     environment:
@@ -27,7 +27,7 @@ services:
 
   database:
     image: mongodb/mongodb-community-server
-    container_name: database-fitness-app-mongodb
+    container_name: database
     ports:
       - "27017:27017"
     networks:
