--- a/code/docker-compose.yml
+++ b/code/docker-compose.yml
@@ -20,6 +20,9 @@ services:
       FATSECRET_CONSUMER_KEY: ${FATSECRET_CONSUMER_KEY}
       FATSECRET_CONSUMER_SECRET: ${FATSECRET_CONSUMER_SECRET}
       MONGO_DB_CONNECTION_STRING: ${MONGO_DB_CONNECTION_STRING}
+    dns:
+      - 8.8.8.8
+
 
 
 networks:
