--- a/code/server/package.json
+++ b/code/server/package.json
@@ -16,8 +16,10 @@
   "type": "module",
   "dependencies": {
     "@trpc/server": "^11.0.1",
+    "@types/express": "^5.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "express": "^5.1.0",
     "mongodb": "^6.15.0",
     "oauth-1.0a": "^2.2.6",
     "superjson": "^2.2.2",
