--- a/.github/workflows/dockerize-and-push.yml
+++ b/.github/workflows/dockerize-and-push.yml
@@ -45,7 +45,6 @@ jobs:
           script: |
             cd ~/dockerization
             docker compose down || echo 'No running docker images by docker compose...'
+            wget 'https://raw.githubusercontent.com/FitnessApp-Clemens-and-Yanni/fitness-app/refs/heads/main/code/docker-compose.yml docker-compose.yml'
             docker compose pull
             docker compose --env-file ".env" up -d
-
-          # wget 'https://raw.githubusercontent.com/FitnessApp-Clemens-and-Yanni/fitness-app/refs/heads/main/code/docker-compose.yml docker-compose.yml'
