#41 integrate calender to food part

--- a/code/server/package.json
+++ b/code/server/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
+    "prettier": "^3.5.3",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2"
   }
