--- a/code/mobile/tsconfig.json
+++ b/code/mobile/tsconfig.json
@@ -5,8 +5,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./*"],
-      "@shared/*": ["../shared/build/*"]
+      "@shared/*": ["./shared/*"]
     }
   },
-  "references": [{ "path": "../server" }, { "path": "../shared" }]
+  "references": [{ "path": "../server" }]
 }
