--- a/code/shared/tsconfig.json
+++ b/code/shared/tsconfig.json
@@ -4,8 +4,8 @@
     "module": "CommonJS",
     "declaration": true,
     "declarationMap": true,
+    "noEmit": true,
     "rootDir": "src",
-    "outDir": "build",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
@@ -13,5 +13,4 @@
     "sourceMap": true,
     "composite": true
   },
-  "references": []
 }
