fix some compatibility issues (merge left-overs)

--- a/code/mobile/tsconfig.json
+++ b/code/mobile/tsconfig.json
@@ -3,9 +3,11 @@
   "compilerOptions": {
     "strict": true,
     "baseUrl": ".",
+    "jsx": "react-jsx",
     "paths": {
       "@/*": ["./*"],
-      "@shared/*": ["./shared/*"]
+      "@shared/*": ["./shared/*"],
+      "@server/*": ["../server/*"]
     }
   },
   "references": [{ "path": "../server" }]
