--- a/code/mobile/tsconfig.json
+++ b/code/mobile/tsconfig.json
@@ -7,6 +7,8 @@
     "paths": {
       "@/*": ["./*"],
       "@shared/*": ["./shared/*"],
+      "@ui/*": ["./components/ui/*"],
+      "@comp/*": ["./components/*"],
       "@server/*": ["../server/*"]
     }
   },
