--- a/code/server/package.json
+++ b/code/server/package.json
@@ -15,8 +15,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "@trpc/server": "^11.0.1",
-    "@types/express": "^5.0.2",
+    "@trpc/server": "^11.1.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
@@ -29,6 +28,6 @@
     "@types/cors": "^2.8.17",
     "prettier": "^3.5.3",
     "tsx": "^4.19.3",
-    "typescript": "^5.8.2"
+    "typescript": "5.8.3"
   }
 }
