--- a/code/shared/package.json
+++ b/code/shared/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
-    "typescript": "^5.8.2"
+    "typescript": "5.8.3"
   },
   "dependencies": {
     "zod": "^3.24.2"
