add fancy edit for workout

--- a/code/mobile/package.json
+++ b/code/mobile/package.json
@@ -21,6 +21,7 @@
     "@rn-primitives/select": "^1.1.0",
     "@rn-primitives/slot": "^1.1.0",
     "@rn-primitives/types": "^1.1.0",
+    "@rneui/themed": "^4.0.0-rc.8",
     "@tanstack/react-form": "^1.2.4",
     "@tanstack/react-query": "^5.71.5",
     "@trpc/client": "^11.1.4",
@@ -34,6 +35,7 @@
     "expo-router": "~4.0.18",
     "expo-status-bar": "~2.0.1",
     "lucide-react-native": "^0.486.0",
+    "mingcute_icon": "^2.9.6",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
